<resources>
    <!-- Titles -->
    <string name="app_name">Lembrete de Leitura de Livros</string>
    <string name="title_activity_cadastrar_livro">Cadastrar Livro</string>
    <string name="title_activity_listar_livros">Listar Livros</string>
    <string name="title_activity_cadastrar_lembrete">Cadastrar Lembrete</string>
    <string name="title_activity_listar_lembretes">Listar Lembretes</string>
    <string name="title_activity_lembrete">Lembrete</string>

    <!-- Main Activity -->
    <string name="main_btnCadastroDeLivros">Cadastro de Livros</string>
    <string name="main_btnListarLivros">Lista de Livros</string>
    <string name="main_btnCadastroDeLembretes">Cadastro de Lembretes</string>
    <string name="main_btnListarLembretes">Lista de Lembretes</string>

    <!-- Cadastrar Livro Activity -->
    <string name="cadastrarLivro_txtCapaLivro">Capa do Livro:</string>
    <string name="cadastrarLivro_txtNome">Nome:</string>
    <string name="cadastrarLivro_txtTotalPaginas">Total de Página:</string>
    <string name="cadastrarLivro_hintNome">Título do livro, nome do livro</string>
    <string name="cadastrarLivro_hintTotalPaginas">Quantidade total de páginas</string>
    <string name="cadastrarLivro_btnCadastrar">Cadastrar</string>

    <!-- Listar Livros -->
    <string name="listarLivros_txtTitulo">Título do Livro: </string>
    <string name="listarLivros_txtTotalPaginas">Total de Páginas: </string>

    <!-- Cadastrar LembreteActivity Activity -->
    <string name="cadastrarLembrete_txtData">Data:</string>
    <string name="cadastrarLembrete_txtHora">Hora:</string>
    <string name="cadastrarLembrete_txtLivro">Livro:</string>
    <string name="cadastrarLembrete_txtRepetir">Repetir:</string>

    <string-array name="cadastrarLembrete_frequencia">
        <item>Nunca</item>
        <item>Todos os domingos</item>
        <item>Todas as segundas-feiras</item>
        <item>Todas as terças-feiras</item>
        <item>Todas as quartas-feiras</item>
        <item>Todas as quintas-feiras</item>
        <item>Todas as sextas-feiras</item>
        <item>Todos os sábados</item>
        <item>Todos os dias</item>
    </string-array>

    <!-- Listar LembreteActivity Activity -->
    <string name="listarLembretes_txtData">Data: </string>
    <string name="listarLembretes_txtHora">Hora: </string>
    <string name="listarLembretes_txtLivro">Livro: </string>
    <string name="listarLembretes_txtRepetir">Repetir: </string>

    <!-- Validação -->
    <string name="campoObrigatório">Campo obrigatório!</string>

    <!-- Mensagem -->
    <string name="livroJaCadastrado">Livro já cadastrado!</string>
    <string name="livroCadastradoSucesso">Livro cadastrado com sucesso!</string>
    <string name="lembreteCadastradoSucesso">Lembrete cadastrado com sucesso!</string>
    <string name="selecioneDataFutura">Selecione uma data futura!</string>
    <string name="semLivro">Cadastre primeiro um livro!</string>
    <string name="erroCadastro">Erro ao cadastrar!</string>
    <string name="erroImagem">Não foi possível abrir a imagem!</string>

</resources>
